--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -292,7 +292,7 @@ a.filled-button:hover {
 
     }
     .background {
-        background-image: url(../assets/img/Arrow.png);
+        background-image: url('../assets/img/Arrow.png');
         background-position: center;
         background-repeat: no-repeat;
         background-size: 100%;
@@ -303,7 +303,7 @@ a.filled-button:hover {
         opacity: 0.2;
     }
 .upper-contact-form{
-    background-image: url(../assets/img/Contact-form-upperpart.png);
+    background-image: url('../assets/img/Contact-form-upperpart.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -324,7 +324,7 @@ a.filled-button:hover {
 /* Footer Style */
 
 footer {
-	background-image: url(../images/FOOTER.png);
+	background-image: url('../images/FOOTER.png');
 	background-size: cover;
 	background-repeat: no-repeat;
 	padding: 80px 0px;
@@ -400,7 +400,7 @@ footer .contact-form input {
 	line-height: 40px;
 	display: inline-block;
 	padding: 0px 15px;
-	color: #aaa!important;
+	color: #aaa !important;
 	background-color: #fff;
 	font-size: 13px;
 	text-transform: none;
@@ -612,7 +612,7 @@ grid-row-gap: 0px;
     
     .div1-contact-form { 
         grid-area: 1 / 1 / 3 / 2;
-        background-image: url(../assets/img/contact-form-img.png);
+        background-image: url('../assets/img/contact-form-img.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: 100%;
@@ -655,7 +655,7 @@ grid-row-gap: 0px;
 /* ABOUT US */
 
 #about_banner {
-    background-image: url(../img/ABOUT-US-UPPER.png);
+    background-image: url('../img/ABOUT-US-UPPER.png');
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -771,7 +771,7 @@ a.filled-button {
     margin-bottom: 80px;
 }
 .upper-contact-form-services{
-    background-image: url(../assets/img/Contact-form-upperpart.png);
+    background-image: url('../assets/img/Contact-form-upperpart.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -800,7 +800,7 @@ a.filled-button {
     
     .div1-contact-form-services { 
         grid-area: 1 / 1 / 2 / 2;
-        background-image: url(../assets/img/contact-form-img.png);
+        background-image: url('../assets/img/contact-form-img.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: 100%;
@@ -814,7 +814,7 @@ a.filled-button {
         background-color: #003a8e;
         border-radius: 0 60px 60px 0;
         height: 698px;
-        background-image: url(../assets/img/MMA-logo.png);
+        background-image: url('../assets/img/MMA-logo.png);
         background-repeat: no-repeat;
         background-position: top;
         background-position-y: 32px;
